Allow chart to be deployed and only ship CRDs

--- a/charts/argo-cd/templates/argocd-application-controller/prometheusrule.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/prometheusrule.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.controller.metrics.enabled .Values.controller.metrics.rules.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
@@ -22,3 +23,4 @@ spec:
     rules:
 {{- toYaml .Values.controller.metrics.rules.spec | nindent 4 }}
 {{- end }}
+{{- end -}}
