--- a/charts/argo-cd/templates/argocd-configs/argocd-dex-server-tls-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-dex-server-tls-secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.dex.enabled .Values.dex.certificateSecret.enabled }}
 apiVersion: v1
 kind: Secret
@@ -23,3 +24,4 @@ data:
   tls.crt: {{ .Values.dex.certificateSecret.crt | b64enc | quote }}
   tls.key: {{ .Values.dex.certificateSecret.key | b64enc | quote }}
 {{- end }}
+{{- end -}}
