--- a/charts/argo-cd/templates/argocd-configs/argocd-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.configs.secret.createSecret }}
 apiVersion: v1
 kind: Secret
@@ -47,3 +48,4 @@ data:
   {{- end }}
 {{- end }}
 {{- end }}
+{{- end -}}
