--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- range .Values.configs.clusterCredentials }}
 ---
 apiVersion: v1
@@ -33,3 +34,4 @@ stringData:
   config: |
     {{- required "A valid .Values.configs.clusterCredentials[].config entry is required!" .config | toRawJson | nindent 4 }}
 {{- end }}
+{{- end -}}
