--- a/charts/argo-cd/templates/argocd-configs/repository-credentials-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/repository-credentials-secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- range $repo_cred_key, $repo_cred_value := .Values.configs.credentialTemplates }}
 ---
 apiVersion: v1
@@ -19,3 +20,4 @@ data:
   {{ $key }}: {{ $value | toString | b64enc }}
   {{- end }}
 {{- end }}
+{{- end -}}
