--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -396,3 +397,4 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       dnsPolicy: {{ .Values.repoServer.dnsPolicy }}
+{{- end -}}
