--- a/charts/argo-cd/templates/argocd-application-controller/clusterrolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/clusterrolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- $config := .Values.controller.clusterAdminAccess | default dict -}}
 {{- if hasKey $config "enabled" | ternary $config.enabled .Values.createClusterRoles }}
 apiVersion: rbac.authorization.k8s.io/v1
@@ -15,3 +16,4 @@ subjects:
   name: {{ include "argo-cd.controllerServiceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
+{{- end -}}
