--- a/charts/argo-cd/templates/argocd-application-controller/networkpolicy.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/networkpolicy.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.global.networkPolicy.create }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
@@ -18,3 +19,4 @@ spec:
   policyTypes:
   - Ingress
 {{- end }}
+{{- end -}}
