--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -338,3 +339,4 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       dnsPolicy: {{ .Values.controller.dnsPolicy }}
+{{- end -}}
