--- a/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.applicationSet.enabled }}
 apiVersion: apps/v1
 kind: Deployment
@@ -315,3 +316,4 @@ spec:
       {{- end }}
       dnsPolicy: {{ .Values.applicationSet.dnsPolicy }}
 {{- end }}
+{{- end -}}
