--- a/charts/argo-cd/templates/argocd-applicationset/networkpolicy.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/networkpolicy.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.applicationSet.enabled .Values.global.networkPolicy.create (or .Values.applicationSet.metrics.enabled .Values.applicationSet.webhook.ingress.enabled) }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
@@ -24,3 +25,4 @@ spec:
   policyTypes:
   - Ingress
 {{- end }}
+{{- end -}}
