--- a/charts/argo-cd/templates/argocd-applicationset/serviceaccount.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.applicationSet.enabled .Values.applicationSet.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
@@ -17,3 +18,4 @@ metadata:
     {{ $key }}: {{ $value | quote }}
   {{- end }}
 {{- end }}
+{{- end -}}
