--- a/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if (hasKey .Values.server "configEnabled") | ternary .Values.server.configEnabled .Values.configs.cm.create }}
 apiVersion: v1
 kind: ConfigMap
@@ -15,3 +16,4 @@ metadata:
 data:
   {{- include "argo-cd.config.cm" . | trim | nindent 2 }}
 {{- end }}
+{{- end -}}
