--- a/charts/argo-cd/templates/argocd-configs/argocd-cmd-params-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-cmd-params-cm.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.configs.params.create }}
 apiVersion: v1
 kind: ConfigMap
@@ -15,3 +16,4 @@ metadata:
 data:
   {{- include "argo-cd.config.params" . | trim | nindent 2 }}
 {{- end }}
+{{- end -}}
