--- a/charts/argo-cd/templates/argocd-configs/argocd-cmp-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-cmp-cm.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.configs.cmp.create }}
 apiVersion: v1
 kind: ConfigMap
@@ -23,3 +24,4 @@ data:
       {{- toYaml $cmp_plugin_config | nindent 6 }}
   {{- end }}
 {{- end }}
+{{- end -}}
