--- a/charts/argo-cd/templates/argocd-configs/argocd-notifications-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-notifications-cm.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.notifications.enabled .Values.notifications.cm.create }}
 apiVersion: v1
 kind: ConfigMap
@@ -26,3 +27,4 @@ data:
     {{- toYaml . | nindent 2 }}
   {{- end }}
 {{- end }}
+{{- end -}}
