--- a/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-notifications-secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.notifications.enabled .Values.notifications.secret.create }}
 apiVersion: v1
 kind: Secret
@@ -21,3 +22,4 @@ stringData:
     {{- toYaml . | nindent 2 }}
   {{- end }}
 {{- end }}
+{{- end -}}
