--- a/charts/argo-cd/templates/argocd-configs/argocd-rbac-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-rbac-cm.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if (hasKey .Values.server "rbacConfigCreate") | ternary .Values.server.rbacConfigCreate .Values.configs.rbac.create }}
 apiVersion: v1
 kind: ConfigMap
@@ -17,3 +18,4 @@ data:
   {{- toYaml . | nindent 2 }}
 {{- end }}
 {{- end }}
+{{- end -}}
