--- a/charts/argo-cd/templates/argocd-configs/argocd-server-tls-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-server-tls-secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.server.certificateSecret.enabled (not .Values.server.certificate.enabled) }}
 apiVersion: v1
 kind: Secret
@@ -20,3 +21,4 @@ data:
   tls.crt: {{ .Values.server.certificateSecret.crt | b64enc | quote }}
   tls.key: {{ .Values.server.certificateSecret.key | b64enc | quote }}
 {{- end }}
+{{- end -}}
