--- a/charts/argo-cd/templates/argocd-configs/externalredis-secret.yaml
+++ b/charts/argo-cd/templates/argocd-configs/externalredis-secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and (or .Values.externalRedis.username .Values.externalRedis.password) (not .Values.externalRedis.existingSecret) }}
 apiVersion: v1
 kind: Secret
@@ -21,3 +22,4 @@ data:
   redis-password: {{ . | b64enc }}
   {{- end }}
 {{- end }}
+{{- end -}}
