--- a/charts/argo-cd/templates/argocd-notifications/role.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/role.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.notifications.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -43,3 +44,4 @@ rules:
   verbs:
   - get
 {{- end }}
+{{- end -}}
