--- a/charts/argo-cd/templates/argocd-notifications/rolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/rolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.notifications.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -15,3 +16,4 @@ subjects:
     name: {{ template "argo-cd.notificationsServiceAccountName" . }}
     namespace: {{ .Release.Namespace }}
 {{- end }}
+{{- end -}}
