--- a/charts/argo-cd/templates/argocd-repo-server/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/clusterrole.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- $config := .Values.repoServer.clusterAdminAccess | default dict -}}
 {{- if hasKey $config "enabled" | ternary $config.enabled .Values.createClusterRoles }}
 apiVersion: rbac.authorization.k8s.io/v1
@@ -22,3 +23,4 @@ rules:
     - '*'
   {{- end }}
 {{- end }}
+{{- end -}}
