--- a/charts/argo-cd/templates/argocd-repo-server/role.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/role.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.repoServer.serviceAccount.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -11,3 +12,4 @@ rules:
 {{toYaml .Values.repoServer.rbac }}
 {{- end }}
 {{- end }}
+{{- end -}}
