--- a/charts/argo-cd/templates/argocd-server/gke/backendconfig.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke/backendconfig.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.server.GKEbackendConfig.enabled }}
 apiVersion: {{ include "argo-cd.apiVersions.cloudgoogle" . }}
 kind: BackendConfig
@@ -9,3 +10,4 @@ metadata:
 spec:
   {{- toYaml .Values.server.GKEbackendConfig.spec | nindent 2 }}
 {{- end }}
+{{- end -}}
