--- a/charts/argo-cd/templates/argocd-server/role.yaml
+++ b/charts/argo-cd/templates/argocd-server/role.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -53,3 +54,4 @@ rules:
   verbs:
   - create
 {{- end }}
+{{- end -}}
