--- a/charts/argo-cd/templates/argocd-server/service.yaml
+++ b/charts/argo-cd/templates/argocd-server/service.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -54,3 +55,4 @@ spec:
 {{- with .Values.server.service.sessionAffinity }}
   sessionAffinity: {{ . }}
 {{- end }}
+{{- end -}}
