--- a/charts/argo-cd/templates/dex/role.yaml
+++ b/charts/argo-cd/templates/dex/role.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.dex.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -17,3 +18,4 @@ rules:
   - list
   - watch
 {{- end }}
+{{- end -}}
