--- a/charts/argo-cd/templates/dex/rolebinding.yaml
+++ b/charts/argo-cd/templates/dex/rolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.dex.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -15,3 +16,4 @@ subjects:
   name: {{ template "argo-cd.dexServiceAccountName" . }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
+{{- end -}}
