--- a/charts/argo-cd/templates/dex/service.yaml
+++ b/charts/argo-cd/templates/dex/service.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if .Values.dex.enabled }}
 apiVersion: v1
 kind: Service
@@ -34,3 +35,4 @@ spec:
   selector:
     {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.dex.name) | nindent 4 }}
 {{- end }}
+{{- end -}}
