--- a/charts/argo-cd/templates/networkpolicy-default-deny.yaml
+++ b/charts/argo-cd/templates/networkpolicy-default-deny.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- if and .Values.global.networkPolicy.create .Values.global.networkPolicy.defaultDenyIngress }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
@@ -11,3 +12,4 @@ spec:
   policyTypes:
   - Ingress
 {{- end }}
+{{- end -}}
