--- a/charts/argo-cd/templates/redis/deployment.yaml
+++ b/charts/argo-cd/templates/redis/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- $redisHa := index .Values "redis-ha" -}}
 {{- if and .Values.redis.enabled (not $redisHa.enabled) -}}
 apiVersion: apps/v1
@@ -146,3 +147,4 @@ spec:
       {{- end }}
       dnsPolicy: {{ .Values.redis.dnsPolicy }}
 {{- end }}
+{{- end -}}
