--- a/charts/argo-cd/templates/redis/metrics.yaml
+++ b/charts/argo-cd/templates/redis/metrics.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- $redisHa := (index .Values "redis-ha") -}}
 {{- if and .Values.redis.enabled (not $redisHa.enabled) .Values.redis.metrics.enabled -}}
 apiVersion: v1
@@ -33,3 +34,4 @@ spec:
   selector:
     {{- include "argo-cd.selectorLabels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 4 }}
 {{- end }}
+{{- end -}}
