--- a/charts/argo-cd/templates/redis/servicemonitor.yaml
+++ b/charts/argo-cd/templates/redis/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.crds.only -}}
 {{- $redisHa := (index .Values "redis-ha") -}}
 {{- if and (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1") .Values.redis.enabled (not $redisHa.enabled) .Values.redis.metrics.enabled .Values.redis.metrics.serviceMonitor.enabled -}}
 apiVersion: monitoring.coreos.com/v1
@@ -46,3 +47,4 @@ spec:
     matchLabels:
       {{- include "argo-cd.selectorLabels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 6 }}
 {{- end }}
+{{- end -}}
