render values by tpl function
Signed-off-by: Boris Komraz <bkomraz1@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1898,7 +1898,7 @@ server:
     # -- Enable an ingress resource for the Argo CD server
     enabled: false
     # -- Additional ingress annotations
-    ## Annotation values may reference other values by {{ .Values.otherValue }} (be sure protect by quotation marks)
+    #  Annotation values may [reference other values]
     annotations: {}
     # -- Additional ingress labels
     labels: {}
@@ -1906,25 +1906,10 @@ server:
     ingressClassName: ""
 
     # -- List of ingress hosts
+    # Hosts value may [reference other values]
     ## Argo Ingress.
     ## Hostnames must be provided if Ingress is enabled.
     ## Secrets must be manually created in the namespace
-    ##
-    ## Hosts value may reference other values.
-    ## For example in case of multiple environments you can use the same argocd values when environment specific
-    ## values are defined in separate environment file that is used by multiple helm charts
-    ##
-    ## # env-values.yaml
-    ## global:
-    ##   dnsDomain: .my.domain.com
-    ##
-    ## # values.yaml
-    ## hosts:
-    ##   - "argocd {{ .Values.global.dnsDomain }}" # be sure protect by quotation marks
-    ##
-    ## helm install my-release argo/argo-cd -f global/env/configuration/env1-values.yaml
-    ##
-
     hosts: []
       # - argocd.example.com
 
@@ -1960,7 +1945,7 @@ server:
     # -- Setup up gRPC ingress to work with an AWS ALB
     isAWSALB: false
     # -- Additional ingress annotations for dedicated [gRPC-ingress]
-    ## Annotations values may reference other values by {{ .Values.otherValue }} (be sure protect by quotation marks)
+    ## Annotations values may [reference other values]
     annotations: {}
     # -- Additional ingress labels for dedicated [gRPC-ingress]
     labels: {}
