--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.8.1-cap-CR-not-setup-kustomize-ns
+appVersion: v2.8.1-cap-CR-20837
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.46.2-3-cap-CR-not-setup-kustomize-ns
+version: 5.46.2-4-cap-CR-20837
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Update ArgoCD version to v2.8.1-cap-CR-not-setup-kustomize-ns
+      description: Update ArgoCD version to v2.8.1-cap-CR-20837
