add to changelog
Signed-off-by: Max! <admin@cloudydev.net>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -18,3 +18,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Updated supported scaling parameters based on https://argoproj.github.io/argo-workflows/scaling/
+    - kind: changed
+      description: Updated a url in values.yaml comments.
