--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.0
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.37.0
+version: 0.37.1
 icon: https://argoproj.github.io/argo-workflows/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -18,3 +18,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Updated supported scaling parameters based on https://argoproj.github.io/argo-workflows/scaling/
+    - kind: changed
+      description: Updated a url in values.yaml comments.
