Added license scanning exepmtion
Signed-off-by: Eddie Knight <knight@linux.com>

--- a/.clomonitor.yml
+++ b/.clomonitor.yml
@@ -11,6 +11,8 @@ exemptions:
     reason: "Refer to self assessments supplied by the codebases Argo Helm supports."
   - check: signed_releases
     reason: "Argo Helm releases are made via Artifact Hub, where they are signed. The unsigned GitHub releases are for reference only."
+  - check: license_scanning
+    reason: "Temporary exemption: pending response from CNCF Service Desk"
 
 # TODO:
 # License scanning information
