fix(argo-workflows): Accept multi auth mode for server
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.1
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.38.0
+version: 0.39.0
 icon: https://argoproj.github.io/argo-workflows/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -16,5 +16,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: changed
-      description: Upgrade Argo Workflows to v3.5.1
+    - kind: fixed
+      description: Accept multi auth mode for server.
