--- a/charts/argo-workflows/templates/server/server-deployment.yaml
+++ b/charts/argo-workflows/templates/server/server-deployment.yaml
@@ -52,8 +52,8 @@ spec:
           {{- with .Values.server.extraArgs }}
             {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- if .Values.server.authMode }}
-          - "--auth-mode={{ .Values.server.authMode }}"
+          {{- range .Values.server.authMode }}
+          - "--auth-mode={{ . }}"
           {{- end }}
           - "--secure={{ .Values.server.secure }}"
           {{- if .Values.singleNamespace }}
