fix(argo-workflows): Accept multi auth mode for server (#2336)
* fix(argo-workflows): Accept multi auth mode for server

Signed-off-by: yu-croco <yu.croco@gmail.com>

* chore(argo-workflows): improve description of authMode

Signed-off-by: yu-croco <yu.croco@gmail.com>

* chore(argo-workflows): keep the older value valid for now as compatibility.

Signed-off-by: yu-croco <yu.croco@gmail.com>

---------

Signed-off-by: yu-croco <yu.croco@gmail.com>
Signed-off-by: Kripu Khadka <khadkakripu4@gmail.com>

--- a/charts/argo-workflows/templates/server/server-deployment.yaml
+++ b/charts/argo-workflows/templates/server/server-deployment.yaml
@@ -55,6 +55,9 @@ spec:
           {{- if .Values.server.authMode }}
           - "--auth-mode={{ .Values.server.authMode }}"
           {{- end }}
+          {{- range .Values.server.authModes }}
+          - "--auth-mode={{ . }}"
+          {{- end }}
           - "--secure={{ .Values.server.secure }}"
           {{- if .Values.singleNamespace }}
           - "--namespaced"
