switch redis repo

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1169,7 +1169,7 @@ redis:
   ## Redis image
   image:
     # -- Redis repository
-    repository: quay.io/codefresh/redis
+    repository: public.ecr.aws/docker/library/redis
     # -- Redis tag
     tag: 7.0.13-alpine
     # -- Redis image pull policy
