CR-21441 -- add event reporter as argocd component (#31)
* almost final statefulset

* final statefulset

* add metrics

* add role

* add rolebinding

* add serviceaccount.yaml

* add servicemonitor.yaml + update values

* add prometheusrule.yaml

* add networkpolicy.yaml

* add pdb

* add cluster roles

* change version + add change

* fix indents

* fix doc

* update docs

* disable event reporter by default

* disable old reporter by value

* add missing docs

* update chart

* update docs

* remove hardcoded defaults + add correct template for argocd-cm

* use production version of argo-cd

* update default amount of reporter replicas

* fix values and docs

* fix metrics service

--- a/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
+++ b/charts/argo-cd/templates/argocd-configs/argocd-cm.yaml
@@ -14,4 +14,8 @@ metadata:
   {{- end }}
 data:
   {{- include "argo-cd.config.cm" . | trim | nindent 2 }}
+
+  {{- if and .Values.eventReporter.enabled .Values.eventReporter.version }}
+  codefresh.reporterVersion: {{ .Values.eventReporter.version | quote }}
+  {{- end }}
 {{- end }}
