--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.8.1-cap-CR-20837
+appVersion: v2.8.1-cap-CR-21281-new-reporter
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.50.1-0-cap-CR-20837
+version: 5.50.1-1-cap-CR-21429
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -26,5 +26,9 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
+    - kind: added
+      description: Add event reporter as a separate component
     - kind: changed
-      description: Update ArgoCD version to v2.8.1-cap-CR-20837
+      description: Update ArgoCD version to v2.8.1-cap-CR-21281-new-reporter
+    - kind: changed
+      description: Add ability to switch between reporters
