update Artifact Hub changelog
Signed-off-by: Andre Marcelo-Tanner <andre@ada.support>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -26,5 +26,10 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: changed
-      description: Upgrade Argo CD to v2.9.2
+    - kind: added
+      description: [Docs] Added migration steps to README for Config Management Plugins settings available since 5.26.0
+      links:
+        - name: GitHub Issue
+          url: https://github.com/argoproj/argo-helm/issues/2359
+        - name: GitHub PR
+          url: https://github.com/argoproj/argo-helm/pull/2360
