--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,7 +27,7 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: [Docs] Added migration steps to README for Config Management Plugins settings available since 5.26.0
+      description: "[docs] Added migration steps to README for Config Management Plugins settings available since 5.26.0"
       links:
         - name: GitHub Issue
           url: https://github.com/argoproj/argo-helm/issues/2359
