fix: Adapt glob for argo-cd chart
Signed-off-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>

--- a/.github/configs/labeler.yaml
+++ b/.github/configs/labeler.yaml
@@ -1,6 +1,6 @@
 argo-cd:
   - changed-files:
-      - any-glob-to-any-file: charts/argo-cd/**/*
+      - any-glob-to-any-file: charts/argo-cd/**
 
 argo-events:
   - changed-files:
