allow setting log config for rollouts
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -45,6 +45,10 @@ spec:
         args:
         - --healthzPort={{ .Values.controller.containerPorts.healthz }}
         - --metricsport={{ .Values.controller.containerPorts.metrics }}
+        - "--loglevel"
+        - "{{ .Values.controller.logging.level }}"
+        - "--log-format"
+        - "{{ .Values.controller.logging.format }}"
         {{- if not .Values.clusterInstall }}
         - --namespaced
         {{- end }}
