allow setting log config for rollouts
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -47,7 +47,7 @@ spec:
         - --metricsport={{ .Values.controller.containerPorts.metrics }}
         - "--loglevel"
         - "{{ .Values.controller.logging.level }}"
-        - "--log-format"
+        - "--logformat"
         - "{{ .Values.controller.logging.format }}"
         {{- if not .Values.clusterInstall }}
         - --namespaced
