allow setting log config for rollouts
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -47,6 +47,7 @@ spec:
         - --metricsport={{ .Values.controller.containerPorts.metrics }}
         - "--loglevel={{ .Values.controller.logging.level }}"
         - "--logformat={{ .Values.controller.logging.format }}"
+        - "--kloglevel={{ .Values.controller.logging.kloglevel }}"
         {{- if not .Values.clusterInstall }}
         - --namespaced
         {{- end }}
