--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -58,6 +58,8 @@ controller:
   logging:
     # -- Set the logging level (one of: `debug`, `info`, `warn`, `error`)
     level: info
+    # -- Set the klog logging level
+    kloglevel: "0"
     # -- Set the logging format (one of: `text`, `json`)
     format: "text"
 
@@ -287,9 +289,6 @@ dashboard:
   tolerations: []
   # -- Assign custom [affinity] rules to the deployment
   affinity: {}
-  logging:
-    # -- Set the logging level (one of: `debug`, `info`, `warn`, `error`)
-    level: info
 
   # -- Assign custom [TopologySpreadConstraints] rules to the dashboard server
   ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
