feat(argo-rollouts): allow setting log config for rollouts (#2386)
* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* allow setting log config for rollouts

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

---------

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>
Co-authored-by: Tim Collins <45351296+tico24@users.noreply.github.com>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -55,6 +55,13 @@ controller:
   tolerations: []
   # -- Assign custom [affinity] rules to the deployment
   affinity: {}
+  logging:
+    # -- Set the logging level (one of: `debug`, `info`, `warn`, `error`)
+    level: info
+    # -- Set the klog logging level
+    kloglevel: "0"
+    # -- Set the logging format (one of: `text`, `json`)
+    format: "text"
 
   # -- Assign custom [TopologySpreadConstraints] rules to the controller
   ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
