--- a/charts/argo-events/templates/argo-events-webhook/deployment.yaml
+++ b/charts/argo-events/templates/argo-events-webhook/deployment.yaml
@@ -41,8 +41,8 @@ spec:
       {{- end }}
       containers:
       - name: {{ .Values.webhook.name }}
-        image: {{ default .Values.global.image.repository .Values.webhook.image.repository }}:{{ default (include "argo-events.defaultTag" .) .Values.webhook.image.tag }}
-        imagePullPolicy: {{ default .Values.global.image.imagePullPolicy .Values.webhook.image.imagePullPolicy }}
+        image: {{ tpl (default .Values.global.image.repository .Values.webhook.image.repository) . }}:{{ tpl (default (include "argo-events.defaultTag" .) .Values.webhook.image.tag) . }}
+        imagePullPolicy: {{ tpl (default .Values.global.image.imagePullPolicy .Values.webhook.image.imagePullPolicy) . }}
         args:
         - webhook-service
         {{- with .Values.webhook.containerSecurityContext }}
