Adding some details in the changelog
Signed-off-by: David Vallee Delisle <me@dvd.dev>

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -19,4 +19,7 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
+      description: Evaluating image values as templates
+    - kind: changed
       description: Upgrade Argo Events to v1.8.1
+
